@@ -4843,6 +4843,7 @@ settings_pack
 			prefer_tcp = 0,
 			peer_proportional = 1
 		};
+		int max_http_recv_buffer_size;
 	};
 
 The ``settings_pack`` struct, contains the names of all settings as
@@ -4854,6 +4855,11 @@ These are the available settings:
 
 .. include:: settings.rst
 
+
+``max_http_recv_buffer_size`` specifies the max number of bytes to receive into
+RAM buffers when downloading stuff over HTTP. Specifically when specifying a
+URL to a .torrent file when adding a torrent or when announcing to an HTTP
+tracker. The default is 2 MiB.
 
 pe_settings
 ===========
