@@ -49,10 +49,10 @@ POSSIBILITY OF SUCH DAMAGE.
 
 namespace libtorrent {
 
-enum { max_bottled_buffer = 1024 * 1024 };
-
 http_connection::http_connection(io_service& ios, connection_queue& cc
-	, http_handler const& handler, bool bottled
+	, http_handler const& handler
+	, bool bottled
+	, int max_bottled_buffer_size
 	, http_connect_handler const& ch
 	, http_filter_handler const& fh
 #ifdef TORRENT_USE_OPENSSL
@@ -72,6 +72,7 @@ http_connection::http_connection(io_service& ios, connection_queue& cc
 	, m_last_receive(time_now())
 	, m_start_time(time_now())
 	, m_bottled(bottled)
+	, m_max_bottled_buffer_size(max_bottled_buffer_size)
 	, m_called(false)
 #ifdef TORRENT_USE_OPENSSL
 	, m_ssl_ctx(ssl_ctx)
@@ -657,7 +658,7 @@ void http_connection::callback(error_code e, char const* data, int size)
 		if ((encoding == "gzip" || encoding == "x-gzip") && size > 0 && data)
 		{
 			std::string error;
-			if (inflate_gzip(data, size, buf, max_bottled_buffer, error))
+			if (inflate_gzip(data, size, buf, m_max_bottled_buffer_size, error))
 			{
 				if (m_handler) m_handler(errors::http_failed_decompress, m_parser, data, size, *this);
 				close();
@@ -869,8 +870,8 @@ void http_connection::on_read(error_code const& e
 	}
 
 	if (int(m_recvbuffer.size()) == m_read_pos)
-		m_recvbuffer.resize((std::min)(m_read_pos + 2048, int(max_bottled_buffer)));
-	if (m_read_pos == max_bottled_buffer)
+		m_recvbuffer.resize((std::min)(m_read_pos + 2048, m_max_bottled_buffer_size));
+	if (m_read_pos == m_max_bottled_buffer_size)
 	{
 		callback(asio::error::eof);
 		close();
