@@ -297,7 +297,8 @@ namespace libtorrent
 		SET(peer_turnover, 4, 0),
 		SET(peer_turnover_cutoff, 90, 0),
 		SET(peer_turnover_interval, 300, 0),
-		SET_NOPREV(connect_seed_every_n_download, 10, 0)
+		SET_NOPREV(connect_seed_every_n_download, 10, 0),
+		SET(max_http_recv_buffer_size, 2*1024*204, 0)
 	};
 
 #undef SET
