@@ -22,6 +22,8 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* added missing async_add_torrent to python bindings
+	* raised the limit for bottled http downloads to 2 MiB
 	* add support for magnet links and URLs in python example client
 	* fixed typo in python bindings' add_torrent_params
 	* introduce a way to add built-in plugins from python
